add login and register

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@
 
 DATABASE_URL="mysql://root:@localhost:3306/task_list?schema=public"
 PORT = 3000
+
+SECRET_ACCESS=secretaccesskeydsmkasjadkjsakdjsad
+SECRET_REFRESH=secretasasdasdasdasdasdwqwekqwjeqj
