--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "apollo-server": "^3.10.0",
     "argon2": "^0.28.7",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0",
