--- a/.env
+++ b/.env
@@ -10,5 +10,7 @@
 DATABASE_URL="mysql://root:@localhost:3306/task_list?schema=public"
 PORT = 5000
 
+CLIENT_URL=http://localhost:3000
+
 SECRET_ACCESS=secretaccesskeydsmkasjadkjsakdjsad
 SECRET_REFRESH=secretasasdasdasdasdasdwqwekqwjeqj
