--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test": "cross-env NODE_ENV=test mocha -r ts-node/register test/*.test.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.0.0",
@@ -21,13 +22,20 @@
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.3",
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0",
+    "supertest": "^6.2.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
