--- a/.env.sample.txt
+++ b/.env.sample.txt
@@ -7,5 +7,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:@localhost:3306/task_list?schema=public"
-PORT = 3000
+DATABASE_URL="mysql://username:password@localhost:3306/task_list?schema=public"
+PORT = 5000
+
+CLIENT_URL=http://localhost:3000
+
+SECRET_ACCESS=mysecretkey
+SECRET_REFRESH=mysecretkey
