--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "license": "MIT",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
